# ai-workbench

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  icon.pen  pencil-new.pen
.github/workflows/: release-desktop.yml  release-mobile.yml
apps/desktop/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
apps/desktop/src/: App.vue  AppShell.vue  main.ts  router.ts  style.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: ChatMessageRow.vue  ChatSegment.vue  ChatView.vue  PairingView.vue  ProjectsView.vue  ProvidersView.vue  SessionWindow.vue  SettingsView.vue  SidebarProjectTree.vue  TerminalView.vue  WorkspaceView.vue
apps/desktop/src/composables/: useWorkspace.ts
apps/desktop/src/services/: tauri.ts
apps/desktop/src/utils/: chat.ts
apps/mobile/: README.md  pubspec.yaml
apps/mobile/android/: build.gradle.kts  gradle-mirrors.init.gradle  settings.gradle.kts
apps/mobile/android/app/: build.gradle.kts
apps/mobile/android/app/src/main/: AndroidManifest.xml
apps/mobile/android/app/src/main/kotlin/com/aiworkbench/remote_term_mobile/: MainActivity.kt
apps/mobile/android/gradle/wrapper/: gradle-wrapper.properties
apps/mobile/ios/Runner/: Info.plist
apps/mobile/ios/Runner.xcodeproj/: project.pbxproj
apps/mobile/lib/: main.dart
apps/mobile/lib/models/: workbench_models.dart
apps/mobile/lib/pages/: chat_page.dart  device_list_page.dart  login_page.dart  mobile_shell_page.dart  pairing_page.dart  providers_page.dart  settings_page.dart  update_page.dart
apps/mobile/lib/services/: api_client.dart  realtime_client.dart  update_service.dart
apps/mobile/lib/state/: workspace_controller.dart  workspace_scope.dart
apps/mobile/lib/widgets/: app_theme.dart  chat_segment_view.dart
apps/mobile/linux/: CMakeLists.txt
apps/mobile/linux/runner/: my_application.cc
apps/mobile/macos/Runner.xcodeproj/: project.pbxproj
apps/mobile/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
apps/mobile/macos/Runner/Configs/: AppInfo.xcconfig
apps/mobile/test/: widget_test.dart
apps/mobile/web/: index.html  manifest.json
apps/mobile/windows/: CMakeLists.txt
apps/mobile/windows/runner/: Runner.rc  main.cpp
crates/desktop-agent/: Cargo.toml
crates/desktop-agent/src/: main.rs  terminal.rs
crates/server/: Cargo.toml
crates/server/migrations/: 0001_init.sql  0002_activity_settings.sql  0003_ai_workbench.sql  0004_archive_ai_sessions.sql  0005_provider_session_id.sql  0006_desktop_pairing_requests.sql  0007_replace_gemini_with_opencode.sql
crates/server/src/: auth.rs  db.rs  error.rs  main.rs  models.rs  state.rs
crates/server/src/routes/: auth.rs  devices.rs  meta.rs  mod.rs  workspace.rs
crates/server/src/ws/: desktop.rs  dispatch.rs  mobile.rs  mod.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
docs/: desktop-auto-update.md  mobile-release-signing.md  protocol.md
