[package]
name = "remote-term-desktop-agent"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap = { version = "4.5", features = ["derive", "env"] }
futures-util.workspace = true
remote-term-shared = { path = "../shared" }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

