[package]
name = "remote-term-server"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
argon2 = "0.5"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros", "ws"] }
chrono.workspace = true
futures-util.workspace = true
jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }
rand = "0.8"
remote-term-shared = { path = "../shared" }
serde.workspace = true
serde_json.workspace = true
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }
thiserror.workspace = true
tokio.workspace = true
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

