[package]
name = "remote-term-desktop"
edition = "2021"
version = "0.1.0"

[lib]
name = "remote_term_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
remote-term-shared = { path = "../../../crates/shared" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
tauri = { version = "2.0.0", features = [] }
tokio = { version = "1", features = ["io-util", "process", "time"] }
uuid = { version = "1", features = ["serde"] }
rfd = "0.15"
portable-pty = "0.9.0"
