[package]
name = "remote-term-desktop"
edition = "2021"
version = "0.1.0"

[lib]
name = "remote_term_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
remote-term-shared = { path = "../../../crates/shared" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
tauri = { version = "2.0.0", features = [] }
tokio = { version = "1", features = ["io-util", "macros", "process", "time"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
uuid = { version = "1", features = ["serde"] }
rfd = "0.15"
portable-pty = "0.9.0"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.1"
